正常非seata测试通过

--- a/seata-account-service2003/src/main/resources/application.yml
+++ b/seata-account-service2003/src/main/resources/application.yml
@@ -14,9 +14,9 @@ spring:
     driver-class-name: org.gjt.mm.mysql.Driver
     type: com.alibaba.druid.pool.DruidDataSource
 
-feign:
-  hystrix:
-    enabled: false
+#feign:
+#  hystrix:
+#    enabled: false
 
 #logging:
 #  level:
